<resources>
    <string name="app_name">Aplikasi Tugas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vincentius Yudha Ryfandi</string>
    <string name="nav_header_subtitle">NIM 118140170</string>
    <string name="nav_header_desc">Saya Adalah Mahasiswa Teknik Informatika</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_skill">Skills</string>
    <string name="menu_skillDetail">Skill Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>